--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 # Mono auto generated files
 mono_crash.*
 
+# Results
+[Rr]esults_*.json
+RESULTS_*.json
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
