+ Added --backtrack_ratio to analyzer, --mock (Fake/Testing API)

--- a/GPTCodeQualitySharpAnalyzer/Properties/launchSettings.json
+++ b/GPTCodeQualitySharpAnalyzer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GPTCodeQualitySharpAnalyzer": {
       "commandName": "Project",
-      "commandLineArgs": "--folder \"C:\\Users\\User\\source\\repos\\GPTCodeQualitySharp\\GPTCodeQualitySharpAnalyzer\""
+      "commandLineArgs": "--folder \"%USERPROFILE%\\source\\repos\\GPTCodeQualitySharp\\GPTCodeQualitySharpAnalyzer\""
     }
   }
 }
